2006-11-11  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Replace the add button with a dojo button.

2006-11-05  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (user): Allow POST or GET submission of a URL for a feed.
	(contact): Add a simple view to deal with the contact page.
	Mostly this is to get the menu bar, etc., but we will have a form
	for podcasters here, too.

2006-11-04  Doug Hellmann  <dhellmann@racemi.com>

	* templates/index.html: Update layout of new podcast list and
	include links to add, see the home page, and the feed.

	* views.py (subscriptions): When they DELETE a subscription,
	remove the relationship between the user and the podcast, then
	remove the queue items from that podcast.

	* urls.py (urlpatterns): Change add_feeds to subscriptions so we
	can use the same structure for adding and removing new feeds.

	* views.py (queue): Make sure we have an integer for the
	item_enclosure_length.

	* feeds.py (UserFeed.item_link): Add a method for item_link().

	* models.py: Use the download_cache module to retrieve feed contents.

	* views.py: Less debug logging.

	* util.py (convert_feed_to_entries): Less debug logging.

	* download_cache.py (retrieve_feed): Utility function to manage
	the cached version of the parsed feed.

	* views.py (main): Limit the recent and popular lists to 5 items each.

	* templates/index.html: Rearrange and start writing introduction copy.

2006-10-29  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (remove_from_queue): Deal with removing items from the
	user's queue.

	* urls.py (urlpatterns): Add the url for a /queue/item/ so we can
	delete items from the queue.

	* models.py (QueueItem.as_dict): Include the truncated_summary as
	a different value from the full summary.

2006-10-28  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (queue): Sort items by reverse order so the most recent
	appears at the top of the queue.

	* util.py (convert_feed_to_entries): Force utf-8 encoding for the